basic merge sort working

--- a/MergeSort/index.html
+++ b/MergeSort/index.html
@@ -8,10 +8,10 @@
         <p class="header">
             Merge Sort
         </p>
-        <div id="array"></div>
-        <div id="count"></div>
+        <div id="array">
+            <canvas id="Canvas"></canvas>
+        </div>
         <br>
-        <h2 class="range" style="text-align: center;"></h2>
     </body>
     <footer>
         <script src="script.js"></script>
